fix bug route stats too wide

--- a/frontend/src/app/route-view/route-view.component.scss
+++ b/frontend/src/app/route-view/route-view.component.scss
@@ -18,12 +18,14 @@
         
         .actions-toolbar{
             display: flex;
+            height: fit-content;
             
             .spacer{
                 flex: 1;
             }
 
             .route-stats {
+                flex-wrap: wrap;
                 display: flex;
                 gap: 24px;
                 
@@ -63,19 +65,6 @@
             
             &:hover {
                 text-decoration: underline;
-            }
-        }
-    }
-}
-
-@media (max-width: 600px) {
-    .route-stats {
-        grid-template-columns: repeat(2, 1fr) !important;
-        gap: 16px !important;
-        
-        .stat-item {
-            .stat-value {
-                font-size: 24px !important;
             }
         }
     }
